--- a/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
+++ b/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
@@ -76,6 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="Modelo.edmx.diagram">
+      <DependentUpon>Modelo.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
