--- a/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
+++ b/branches/Sindicato/Sindicato.Model/Sindicato.Model.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PartialSD_TRANSFERENCIAS_HOJAS.cs" />
     <Compile Include="PartialSD_AUTOS.cs" />
     <Compile Include="PartialSD_INGRESOS_POR_SOCIOS.cs" />
     <Compile Include="PartialSD_PERMISOS.cs" />
