--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -56,6 +56,8 @@
     <Compile Include="AutosServices.cs" />
     <Compile Include="CierresAhorroServices.cs" />
     <Compile Include="CierresServices.cs" />
+    <Compile Include="CierresCajaServices.cs" />
+    <Compile Include="Interfaces\ICierresCajaServices.cs" />
     <Compile Include="Interfaces\ICierresAhorroServices.cs" />
     <Compile Include="KardexHojasServices.cs" />
     <Compile Include="Interfaces\IKardexHojasServices.cs" />
