--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -88,11 +88,19 @@
     <Compile Include="Controllers\AutosController.cs" />
     <Compile Include="Controllers\CierresController.cs" />
     <Compile Include="Controllers\CierresParadaController.cs" />
+    <Compile Include="Controllers\IngresosController.cs" />
+    <Compile Include="Controllers\KardexHojaController.cs" />
+    <Compile Include="Controllers\MovilesController.cs" />
     <Compile Include="Controllers\ObligacionesController.cs" />
+    <Compile Include="Controllers\PermisosController.cs" />
+    <Compile Include="Controllers\PrestamosController.cs" />
+    <Compile Include="Controllers\RegulacionesController.cs" />
+    <Compile Include="Controllers\ReportesPDFController.cs" />
     <Compile Include="Controllers\TransferenciasController.cs" />
     <Compile Include="Controllers\DescuentosController.cs" />
     <Compile Include="Controllers\OtrosController.cs" />
     <Compile Include="Controllers\ParadasController.cs" />
+    <Compile Include="Controllers\UsuariosController.cs" />
     <Compile Include="Controllers\VentaHojasController.cs" />
     <Compile Include="Controllers\ParametrosController.cs" />
     <Compile Include="Controllers\FamiliaresController.cs" />
@@ -316,6 +324,14 @@
     <Content Include="App\Store\Utils\Tablas.js" />
     <Content Include="App\Store\Ventas\DetallesVenta.js" />
     <Content Include="App\Store\Ventas\Ventas.js" />
+    <Content Include="App\View\Ahorros\FormCierre.js" />
+    <Content Include="App\View\Ahorros\Forms.js" />
+    <Content Include="App\View\Ahorros\FormTransferir.js" />
+    <Content Include="App\View\Ahorros\GridCierres.js" />
+    <Content Include="App\View\Ahorros\GridDetalles.js" />
+    <Content Include="App\View\Ahorros\Grids.js" />
+    <Content Include="App\View\Ahorros\PanelIngresos.js" />
+    <Content Include="App\View\Ahorros\Principal.js" />
     <Content Include="App\View\Cajas\FormCaja.js" />
     <Content Include="App\View\Cajas\FormMovimiento.js" />
     <Content Include="App\View\Cajas\Forms.js" />
@@ -338,6 +354,10 @@
     <Content Include="App\View\Choferes\Grids.js" />
     <Content Include="App\View\Choferes\ImageField.js" />
     <Content Include="App\View\Choferes\Principal.js" />
+    <Content Include="App\View\CierreCaja\FormCierre.js" />
+    <Content Include="App\View\CierreCaja\GridCierres.js" />
+    <Content Include="App\View\CierreCaja\GridDetalles.js" />
+    <Content Include="App\View\CierreCaja\Principal.js" />
     <Content Include="App\View\CierresParada\GridDetalles.js" />
     <Content Include="App\View\Cierres\GridCierreSocios.js" />
     <Content Include="App\View\Clientes\FormCrearVenta.js" />
@@ -361,10 +381,60 @@
     <Content Include="App\View\CierresParada\GridCierres.js" />
     <Content Include="App\View\CierresParada\Principal.js" />
     <Content Include="App\View\Hojas\GridDetalles.js" />
+    <Content Include="App\View\IngresosPorSocios\FormIngreso.js" />
+    <Content Include="App\View\IngresosPorSocios\Forms.js" />
+    <Content Include="App\View\IngresosPorSocios\GridIngresos.js" />
+    <Content Include="App\View\IngresosPorSocios\Grids.js" />
+    <Content Include="App\View\IngresosPorSocios\Principal.js" />
+    <Content Include="App\View\KardexHojas\FormAuto.js" />
+    <Content Include="App\View\KardexHojas\Forms.js" />
+    <Content Include="App\View\KardexHojas\GridKardexHojas.js" />
+    <Content Include="App\View\KardexHojas\Grids.js" />
+    <Content Include="App\View\KardexHojas\Principal.js" />
     <Content Include="App\View\Obligaciones\FormObligacion.js" />
     <Content Include="App\View\Obligaciones\GridObligaciones.js" />
     <Content Include="App\View\Obligaciones\Principal.js" />
+    <Content Include="App\View\Permisos\FormPermiso.js" />
+    <Content Include="App\View\Permisos\Forms.js" />
+    <Content Include="App\View\Permisos\GridPermisos.js" />
+    <Content Include="App\View\Permisos\Grids.js" />
+    <Content Include="App\View\Permisos\Principal.js" />
+    <Content Include="App\View\Prestamos\FormMora.js" />
+    <Content Include="App\View\Prestamos\FormPagoPrestamo.js" />
+    <Content Include="App\View\Prestamos\FormPrestamo.js" />
+    <Content Include="App\View\Prestamos\FormRetiro.js" />
+    <Content Include="App\View\Prestamos\GridMoras.js" />
+    <Content Include="App\View\Prestamos\GridPagos.js" />
+    <Content Include="App\View\Prestamos\GridPlanPagos.js" />
+    <Content Include="App\View\Prestamos\GridPrestamos.js" />
+    <Content Include="App\View\Prestamos\Principal.js" />
+    <Content Include="App\View\Regulaciones\FormRegulacion.js" />
+    <Content Include="App\View\Regulaciones\Forms.js" />
+    <Content Include="App\View\Regulaciones\GridDetalles.js" />
+    <Content Include="App\View\Regulaciones\GridRegulaciones.js" />
+    <Content Include="App\View\Regulaciones\Grids.js" />
+    <Content Include="App\View\Regulaciones\Principal.js" />
+    <Content Include="App\View\Reportes\Reportes.js" />
+    <Content Include="App\View\Reportes\ReportesSocios.js" />
+    <Content Include="App\View\Reports\ReportsPDF.js" />
     <Content Include="App\View\Socios\GridKardexDebe.js" />
+    <Content Include="App\View\TiposEgresos\FormEgreso.js" />
+    <Content Include="App\View\TiposEgresos\Forms.js" />
+    <Content Include="App\View\TiposEgresos\GridEgresos.js" />
+    <Content Include="App\View\TiposEgresos\Grids.js" />
+    <Content Include="App\View\TiposEgresos\Principal.js" />
+    <Content Include="App\View\TiposIngresos\FormIngreso.js" />
+    <Content Include="App\View\TiposIngresos\Forms.js" />
+    <Content Include="App\View\TiposIngresos\GridIngresos.js" />
+    <Content Include="App\View\TiposIngresos\Grids.js" />
+    <Content Include="App\View\TiposIngresos\Principal.js" />
+    <Content Include="App\View\TiposPrestamos\Forms.js" />
+    <Content Include="App\View\TiposPrestamos\FormTipoPrestamo.js" />
+    <Content Include="App\View\TiposPrestamos\Grids.js" />
+    <Content Include="App\View\TiposPrestamos\GridTiposPrestamos.js" />
+    <Content Include="App\View\TiposPrestamos\Principal.js" />
+    <Content Include="App\View\TransferenciasHojas\GridTransferenciasHojas.js" />
+    <Content Include="App\View\TransferenciasHojas\Principal.js" />
     <Content Include="App\View\Transferencias\FormTransferencia.js" />
     <Content Include="App\View\Transferencias\GridTransferencias.js" />
     <Content Include="App\View\Transferencias\Principal.js" />
@@ -446,6 +516,11 @@
     <Content Include="App\View\Tanques\Grids.js" />
     <Content Include="App\View\Tanques\GridTanques.js" />
     <Content Include="App\View\Tanques\Principal.js" />
+    <Content Include="App\View\Usuarios\Forms.js" />
+    <Content Include="App\View\Usuarios\FormUsuario.js" />
+    <Content Include="App\View\Usuarios\Grids.js" />
+    <Content Include="App\View\Usuarios\GridUsuarios.js" />
+    <Content Include="App\View\Usuarios\Principal.js" />
     <Content Include="App\View\Utils\Principal.js" />
     <Content Include="App\View\Ventas\FormCrearVenta.js" />
     <Content Include="App\View\Ventas\Forms.js" />
