--- a/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
+++ b/branches/Sindicato/Sindicato.WebSite/Sindicato.WebSite.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Controllers\AutosController.cs" />
     <Compile Include="Controllers\CierresController.cs" />
     <Compile Include="Controllers\CierresParadaController.cs" />
+    <Compile Include="Controllers\DeudasSociosController.cs" />
     <Compile Include="Controllers\IngresosController.cs" />
     <Compile Include="Controllers\KardexHojaController.cs" />
     <Compile Include="Controllers\MovilesController.cs" />
@@ -226,9 +227,24 @@
     <Content Include="App\extensible\locale\extensible-lang-sv_SE.js" />
     <Content Include="App\extensible\locale\extensible-lang-zh_CN.js" />
     <Content Include="App\extensible\locale\extensible-lang-zh_TW.js" />
+    <Content Include="App\Model\CierreCaja\Cierres.js" />
+    <Content Include="App\Model\CierreCaja\Detalles.js" />
     <Content Include="App\Model\CierresParada\CierresParada.js" />
     <Content Include="App\Model\CierresParada\Detalles.js" />
     <Content Include="App\Model\Cierres\Detalles.js" />
+    <Content Include="App\Model\DeudasSocios\Detalles.js" />
+    <Content Include="App\Model\DeudasSocios\DeudasSocios.js" />
+    <Content Include="App\Model\IngresosPorSocios\Ingresos.js" />
+    <Content Include="App\Model\IngresosPorSocios\TiposIngresos.js" />
+    <Content Include="App\Model\KardexHojas\KardexHojas.js" />
+    <Content Include="App\Model\Permisos\Permisos.js" />
+    <Content Include="App\Model\Prestamos\Moras.js" />
+    <Content Include="App\Model\Prestamos\Pagos.js" />
+    <Content Include="App\Model\Prestamos\PlanPagos.js" />
+    <Content Include="App\Model\Prestamos\Prestamos.js" />
+    <Content Include="App\Model\Prestamos\TiposPrestamos.js" />
+    <Content Include="App\Model\Regulaciones\Detalles.js" />
+    <Content Include="App\Model\Regulaciones\Regulaciones.js" />
     <Content Include="App\Model\Socios\KardexDebe.js" />
     <Content Include="App\Model\Cajas\Cajas.js" />
     <Content Include="App\Model\Cajas\Kardex.js" />
@@ -240,6 +256,7 @@
     <Content Include="App\Model\Cierres\Cierres.js" />
     <Content Include="App\Model\Amortizaciones\Amortizaciones.js" />
     <Content Include="App\Model\Obligaciones\Obligaciones.js" />
+    <Content Include="App\Model\TransferenciasHojas\Transferencias.js" />
     <Content Include="App\Model\Transferencias\Transferencias.js" />
     <Content Include="App\Model\Descuentos\Detalles.js" />
     <Content Include="App\Model\Descuentos\Descuentos.js" />
@@ -265,13 +282,31 @@
     <Content Include="App\Model\Socios\Documentos.js" />
     <Content Include="App\Model\Familiares\Familiares.js" />
     <Content Include="App\Model\Socios\Socios.js" />
+    <Content Include="App\Model\Usuarios\MenuOpciones.js" />
+    <Content Include="App\Model\Usuarios\Perfiles.js" />
+    <Content Include="App\Model\Usuarios\Usuarios.js" />
     <Content Include="App\Model\Utils\Tablas.js" />
     <Content Include="App\Model\Ventas\DetallesVentaEdit.js" />
     <Content Include="App\Model\Ventas\DetallesVenta.js" />
     <Content Include="App\Model\Ventas\Ventas.js" />
+    <Content Include="App\Store\CierreCaja\Cierres.js" />
+    <Content Include="App\Store\CierreCaja\Detalles.js" />
     <Content Include="App\Store\CierresParada\CierresParada.js" />
     <Content Include="App\Store\CierresParada\Detalles.js" />
     <Content Include="App\Store\Cierres\Detalles.js" />
+    <Content Include="App\Store\DeudasSocios\DeudasSocios.js" />
+    <Content Include="App\Store\DeudasSocios\Detalles.js" />
+    <Content Include="App\Store\IngresosPorSocios\Ingresos.js" />
+    <Content Include="App\Store\IngresosPorSocios\TiposIngresos.js" />
+    <Content Include="App\Store\KardexHojas\KardexHojas.js" />
+    <Content Include="App\Store\Permisos\Permisos.js" />
+    <Content Include="App\Store\Prestamos\Moras.js" />
+    <Content Include="App\Store\Prestamos\Pagos.js" />
+    <Content Include="App\Store\Prestamos\PlanPagos.js" />
+    <Content Include="App\Store\Prestamos\Prestamos.js" />
+    <Content Include="App\Store\Prestamos\TiposPrestamos.js" />
+    <Content Include="App\Store\Regulaciones\Detalles.js" />
+    <Content Include="App\Store\Regulaciones\Regulaciones.js" />
     <Content Include="App\Store\Socios\KardexDebe.js" />
     <Content Include="App\Store\Autos\AutosSocios.js" />
     <Content Include="App\Store\Cajas\Cajas.js" />
@@ -284,6 +319,7 @@
     <Content Include="App\Store\Cierres\Cierres.js" />
     <Content Include="App\Store\Amortizaciones\Amortizaciones.js" />
     <Content Include="App\Store\Obligaciones\Obligaciones.js" />
+    <Content Include="App\Store\TransferenciasHojas\Transferencias.js" />
     <Content Include="App\Store\Transferencias\Transferencias.js" />
     <Content Include="App\Store\Descuentos\Detalles.js" />
     <Content Include="App\Store\Descuentos\Descuentos.js" />
@@ -312,9 +348,20 @@
     <Content Include="App\Store\Familiares\Familiares.js" />
     <Content Include="App\Store\Socios\Socios.js" />
     <Content Include="App\Store\Tanques\Tanques.js" />
+    <Content Include="App\Store\Usuarios\MenuOpciones.js" />
+    <Content Include="App\Store\Usuarios\Perfiles.js" />
+    <Content Include="App\Store\Usuarios\Usuarios.js" />
     <Content Include="App\Store\Utils\Tablas.js" />
     <Content Include="App\Store\Ventas\DetallesVenta.js" />
     <Content Include="App\Store\Ventas\Ventas.js" />
+    <Content Include="App\View\Ahorros\FormCierre.js" />
+    <Content Include="App\View\Ahorros\Forms.js" />
+    <Content Include="App\View\Ahorros\FormTransferir.js" />
+    <Content Include="App\View\Ahorros\GridCierres.js" />
+    <Content Include="App\View\Ahorros\GridDetalles.js" />
+    <Content Include="App\View\Ahorros\Grids.js" />
+    <Content Include="App\View\Ahorros\PanelIngresos.js" />
+    <Content Include="App\View\Ahorros\Principal.js" />
     <Content Include="App\View\Cajas\FormCaja.js" />
     <Content Include="App\View\Cajas\FormMovimiento.js" />
     <Content Include="App\View\Cajas\Forms.js" />
@@ -337,6 +384,10 @@
     <Content Include="App\View\Choferes\Grids.js" />
     <Content Include="App\View\Choferes\ImageField.js" />
     <Content Include="App\View\Choferes\Principal.js" />
+    <Content Include="App\View\CierreCaja\FormCierre.js" />
+    <Content Include="App\View\CierreCaja\GridCierres.js" />
+    <Content Include="App\View\CierreCaja\GridDetalles.js" />
+    <Content Include="App\View\CierreCaja\Principal.js" />
     <Content Include="App\View\CierresParada\GridDetalles.js" />
     <Content Include="App\View\Cierres\GridCierreSocios.js" />
     <Content Include="App\View\Clientes\FormCrearVenta.js" />
@@ -359,11 +410,67 @@
     <Content Include="App\View\CierresParada\FormCierre.js" />
     <Content Include="App\View\CierresParada\GridCierres.js" />
     <Content Include="App\View\CierresParada\Principal.js" />
+    <Content Include="App\View\DeudasSocios\GridDetalles.js" />
+    <Content Include="App\View\DeudasSocios\FormDeuda.js" />
+    <Content Include="App\View\DeudasSocios\Forms.js" />
+    <Content Include="App\View\DeudasSocios\GridDeudas.js" />
+    <Content Include="App\View\DeudasSocios\Grids.js" />
+    <Content Include="App\View\DeudasSocios\Principal.js" />
     <Content Include="App\View\Hojas\GridDetalles.js" />
+    <Content Include="App\View\IngresosPorSocios\FormIngreso.js" />
+    <Content Include="App\View\IngresosPorSocios\Forms.js" />
+    <Content Include="App\View\IngresosPorSocios\GridIngresos.js" />
+    <Content Include="App\View\IngresosPorSocios\Grids.js" />
+    <Content Include="App\View\IngresosPorSocios\Principal.js" />
+    <Content Include="App\View\KardexHojas\FormAuto.js" />
+    <Content Include="App\View\KardexHojas\Forms.js" />
+    <Content Include="App\View\KardexHojas\GridKardexHojas.js" />
+    <Content Include="App\View\KardexHojas\Grids.js" />
+    <Content Include="App\View\KardexHojas\Principal.js" />
     <Content Include="App\View\Obligaciones\FormObligacion.js" />
     <Content Include="App\View\Obligaciones\GridObligaciones.js" />
     <Content Include="App\View\Obligaciones\Principal.js" />
+    <Content Include="App\View\Permisos\FormPermiso.js" />
+    <Content Include="App\View\Permisos\Forms.js" />
+    <Content Include="App\View\Permisos\GridPermisos.js" />
+    <Content Include="App\View\Permisos\Grids.js" />
+    <Content Include="App\View\Permisos\Principal.js" />
+    <Content Include="App\View\Prestamos\FormMora.js" />
+    <Content Include="App\View\Prestamos\FormPagoPrestamo.js" />
+    <Content Include="App\View\Prestamos\FormPrestamo.js" />
+    <Content Include="App\View\Prestamos\FormRetiro.js" />
+    <Content Include="App\View\Prestamos\GridMoras.js" />
+    <Content Include="App\View\Prestamos\GridPagos.js" />
+    <Content Include="App\View\Prestamos\GridPlanPagos.js" />
+    <Content Include="App\View\Prestamos\GridPrestamos.js" />
+    <Content Include="App\View\Prestamos\Principal.js" />
+    <Content Include="App\View\Regulaciones\FormRegulacion.js" />
+    <Content Include="App\View\Regulaciones\Forms.js" />
+    <Content Include="App\View\Regulaciones\GridDetalles.js" />
+    <Content Include="App\View\Regulaciones\GridRegulaciones.js" />
+    <Content Include="App\View\Regulaciones\Grids.js" />
+    <Content Include="App\View\Regulaciones\Principal.js" />
+    <Content Include="App\View\Reportes\Reportes.js" />
+    <Content Include="App\View\Reportes\ReportesSocios.js" />
+    <Content Include="App\View\Reports\ReportsPDF.js" />
     <Content Include="App\View\Socios\GridKardexDebe.js" />
+    <Content Include="App\View\TiposEgresos\FormEgreso.js" />
+    <Content Include="App\View\TiposEgresos\Forms.js" />
+    <Content Include="App\View\TiposEgresos\GridEgresos.js" />
+    <Content Include="App\View\TiposEgresos\Grids.js" />
+    <Content Include="App\View\TiposEgresos\Principal.js" />
+    <Content Include="App\View\TiposIngresos\FormIngreso.js" />
+    <Content Include="App\View\TiposIngresos\Forms.js" />
+    <Content Include="App\View\TiposIngresos\GridIngresos.js" />
+    <Content Include="App\View\TiposIngresos\Grids.js" />
+    <Content Include="App\View\TiposIngresos\Principal.js" />
+    <Content Include="App\View\TiposPrestamos\Forms.js" />
+    <Content Include="App\View\TiposPrestamos\FormTipoPrestamo.js" />
+    <Content Include="App\View\TiposPrestamos\Grids.js" />
+    <Content Include="App\View\TiposPrestamos\GridTiposPrestamos.js" />
+    <Content Include="App\View\TiposPrestamos\Principal.js" />
+    <Content Include="App\View\TransferenciasHojas\GridTransferenciasHojas.js" />
+    <Content Include="App\View\TransferenciasHojas\Principal.js" />
     <Content Include="App\View\Transferencias\FormTransferencia.js" />
     <Content Include="App\View\Transferencias\GridTransferencias.js" />
     <Content Include="App\View\Transferencias\Principal.js" />
@@ -445,6 +552,11 @@
     <Content Include="App\View\Tanques\Grids.js" />
     <Content Include="App\View\Tanques\GridTanques.js" />
     <Content Include="App\View\Tanques\Principal.js" />
+    <Content Include="App\View\Usuarios\Forms.js" />
+    <Content Include="App\View\Usuarios\FormUsuario.js" />
+    <Content Include="App\View\Usuarios\Grids.js" />
+    <Content Include="App\View\Usuarios\GridUsuarios.js" />
+    <Content Include="App\View\Usuarios\Principal.js" />
     <Content Include="App\View\Utils\Principal.js" />
     <Content Include="App\View\Ventas\FormCrearVenta.js" />
     <Content Include="App\View\Ventas\Forms.js" />
