--- a/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
+++ b/branches/Sindicato/Sindicato.Services/Sindicato.Services.csproj
@@ -57,6 +57,8 @@
     <Compile Include="CierresAhorroServices.cs" />
     <Compile Include="CierresServices.cs" />
     <Compile Include="CierresCajaServices.cs" />
+    <Compile Include="DeudasServices.cs" />
+    <Compile Include="Interfaces\IDeudasServices.cs" />
     <Compile Include="Interfaces\ICierresCajaServices.cs" />
     <Compile Include="Interfaces\ICierresAhorroServices.cs" />
     <Compile Include="KardexHojasServices.cs" />
